--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "ant-design-vue": "^1.7.4",
     "ui-vue-antd": "^1.0.6",
     "vue": "^2.5.2",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
